Add picture story and assessment rule

--- a/6_CSS_Drawing/challenge.html
+++ b/6_CSS_Drawing/challenge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>#6 CSS Exploitation</title>
+    <title>#6 CSS Drawing</title>
     <style>
         /* here's your sketch pad, let's call it: picture as code */
 
